Updated bus stop number description

--- a/Departures.ini
+++ b/Departures.ini
@@ -21,7 +21,7 @@ textSize=8
 colorBar=235,170,0,255
 colorText=255,255,255,205
 busURL = http://tsy.acislive.com/pip/stop_simulator_table.asp?NaPTAN=37021400&bMap=0&offset=0&refresh=30&pscode=&dest=&duegate=90&PAC=37021400
-; Change last numbers to bus stop number from http://www.travelsouthyorkshire.com/onstreet/#section1
+; Change the two instances of 37021400 to your bus stop number from http://www.travelsouthyorkshire.com/onstreet/#section1
 
 ; --------------------
 ; MEASURES 
